src/grammar/DesmoscriptParser.ts
// Generated from grammar/Desmoscript.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { DesmoscriptListener } from "./DesmoscriptListener";
import { DesmoscriptVisitor } from "./DesmoscriptVisitor";


export class DesmoscriptParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly T__35 = 36;
	public static readonly T__36 = 37;
	public static readonly T__37 = 38;
	public static readonly T__38 = 39;
	public static readonly T__39 = 40;
	public static readonly T__40 = 41;
	public static readonly T__41 = 42;
	public static readonly T__42 = 43;
	public static readonly T__43 = 44;
	public static readonly T__44 = 45;
	public static readonly T__45 = 46;
	public static readonly T__46 = 47;
	public static readonly STRING = 48;
	public static readonly NUMBER = 49;
	public static readonly IDENTIFIER_SEGMENT = 50;
	public static readonly WS = 51;
	public static readonly RULE_djson = 0;
	public static readonly RULE_expression = 1;
	public static readonly RULE_expressionList = 2;
	public static readonly RULE_functionDefArgList = 3;
	public static readonly RULE_functionCallArgList = 4;
	public static readonly RULE_list = 5;
	public static readonly RULE_functionCall = 6;
	public static readonly RULE_macroCall = 7;
	public static readonly RULE_identifier = 8;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"djson", "expression", "expressionList", "functionDefArgList", "functionCallArgList", 
		"list", "functionCall", "macroCall", "identifier",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'{'", "'}'", "':'", "','", "'['", "']'", "'ds'", "'('", "')'", 
		"'true'", "'false'", "'null'", "'@'", "'import'", "'as'", "';'", "'settings'", 
		"'for'", "'='", "'\\'", "'*'", "'/'", "'%'", "'+'", "'-'", "'=='", "'>'", 
		"'<'", "'>='", "'<='", "'..'", "'sum'", "'product'", "'integral'", "'to'", 
		"'derivative'", "'macro'", "'fn'", "'ns'", "'with'", "'match'", "'=>'", 
		"'->'", "'()'", "'!()'", "'!('", "'.'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, "STRING", 
		"NUMBER", "IDENTIFIER_SEGMENT", "WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(DesmoscriptParser._LITERAL_NAMES, DesmoscriptParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return DesmoscriptParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Desmoscript.g4"; }

	// @Override
	public get ruleNames(): string[] { return DesmoscriptParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return DesmoscriptParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(DesmoscriptParser._ATN, this);
	}
	// @RuleVersion(0)
	public djson(): DjsonContext {
		let _localctx: DjsonContext = new DjsonContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, DesmoscriptParser.RULE_djson);
		let _la: number;
		try {
			this.state = 61;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case DesmoscriptParser.NUMBER:
				_localctx = new NumberDJsonContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 18;
				(_localctx as NumberDJsonContext)._data = this.match(DesmoscriptParser.NUMBER);
				}
				break;
			case DesmoscriptParser.STRING:
				_localctx = new StringDJsonContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 19;
				(_localctx as StringDJsonContext)._data = this.match(DesmoscriptParser.STRING);
				}
				break;
			case DesmoscriptParser.T__0:
				_localctx = new ObjectDJsonContext(_localctx);
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 37;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
				case 1:
					{
					this.state = 20;
					this.match(DesmoscriptParser.T__0);
					this.state = 21;
					this.match(DesmoscriptParser.T__1);
					}
					break;

				case 2:
					{
					this.state = 22;
					this.match(DesmoscriptParser.T__0);
					this.state = 23;
					(_localctx as ObjectDJsonContext)._IDENTIFIER_SEGMENT = this.match(DesmoscriptParser.IDENTIFIER_SEGMENT);
					(_localctx as ObjectDJsonContext)._keys.push((_localctx as ObjectDJsonContext)._IDENTIFIER_SEGMENT);
					this.state = 24;
					this.match(DesmoscriptParser.T__2);
					this.state = 25;
					(_localctx as ObjectDJsonContext)._djson = this.djson();
					(_localctx as ObjectDJsonContext)._values.push((_localctx as ObjectDJsonContext)._djson);
					this.state = 32;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (_la === DesmoscriptParser.T__3) {
						{
						{
						this.state = 26;
						this.match(DesmoscriptParser.T__3);
						this.state = 27;
						(_localctx as ObjectDJsonContext)._IDENTIFIER_SEGMENT = this.match(DesmoscriptParser.IDENTIFIER_SEGMENT);
						(_localctx as ObjectDJsonContext)._keys.push((_localctx as ObjectDJsonContext)._IDENTIFIER_SEGMENT);
						this.state = 28;
						this.match(DesmoscriptParser.T__2);
						this.state = 29;
						(_localctx as ObjectDJsonContext)._djson = this.djson();
						(_localctx as ObjectDJsonContext)._values.push((_localctx as ObjectDJsonContext)._djson);
						}
						}
						this.state = 34;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					this.state = 35;
					this.match(DesmoscriptParser.T__1);
					}
					break;
				}
				}
				break;
			case DesmoscriptParser.T__4:
				_localctx = new ArrayDJsonContext(_localctx);
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 52;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 3, this._ctx) ) {
				case 1:
					{
					this.state = 39;
					this.match(DesmoscriptParser.T__4);
					this.state = 40;
					this.match(DesmoscriptParser.T__5);
					}
					break;

				case 2:
					{
					this.state = 41;
					this.match(DesmoscriptParser.T__4);
					this.state = 42;
					(_localctx as ArrayDJsonContext)._djson = this.djson();
					(_localctx as ArrayDJsonContext)._elements.push((_localctx as ArrayDJsonContext)._djson);
					this.state = 47;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (_la === DesmoscriptParser.T__3) {
						{
						{
						this.state = 43;
						this.match(DesmoscriptParser.T__3);
						this.state = 44;
						(_localctx as ArrayDJsonContext)._djson = this.djson();
						(_localctx as ArrayDJsonContext)._elements.push((_localctx as ArrayDJsonContext)._djson);
						}
						}
						this.state = 49;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					this.state = 50;
					this.match(DesmoscriptParser.T__5);
					}
					break;
				}
				}
				break;
			case DesmoscriptParser.T__6:
				_localctx = new DesmoscriptDJsonContext(_localctx);
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 54;
				this.match(DesmoscriptParser.T__6);
				this.state = 55;
				this.match(DesmoscriptParser.T__7);
				this.state = 56;
				(_localctx as DesmoscriptDJsonContext)._expr = this.expression(0);
				this.state = 57;
				this.match(DesmoscriptParser.T__8);
				}
				break;
			case DesmoscriptParser.T__9:
			case DesmoscriptParser.T__10:
				_localctx = new BooleanDJsonContext(_localctx);
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 59;
				(_localctx as BooleanDJsonContext)._data = this._input.LT(1);
				_la = this._input.LA(1);
				if (!(_la === DesmoscriptParser.T__9 || _la === DesmoscriptParser.T__10)) {
					(_localctx as BooleanDJsonContext)._data = this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				}
				break;
			case DesmoscriptParser.T__11:
				_localctx = new NullDJsonContext(_localctx);
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 60;
				this.match(DesmoscriptParser.T__11);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public expression(): ExpressionContext;
	public expression(_p: number): ExpressionContext;
	// @RuleVersion(0)
	public expression(_p?: number): ExpressionContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: ExpressionContext = new ExpressionContext(this._ctx, _parentState);
		let _prevctx: ExpressionContext = _localctx;
		let _startState: number = 2;
		this.enterRecursionRule(_localctx, 2, DesmoscriptParser.RULE_expression, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 191;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 13, this._ctx) ) {
			case 1:
				{
				_localctx = new FunctionCallExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;

				this.state = 64;
				(_localctx as FunctionCallExprContext)._call = this.functionCall();
				}
				break;

			case 2:
				{
				_localctx = new JSONExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 65;
				this.match(DesmoscriptParser.T__12);
				this.state = 66;
				(_localctx as JSONExprContext)._jsonval = this.djson();
				}
				break;

			case 3:
				{
				_localctx = new MacroCallExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 67;
				(_localctx as MacroCallExprContext)._call = this.macroCall();
				}
				break;

			case 4:
				{
				_localctx = new ImportExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 68;
				this.match(DesmoscriptParser.T__13);
				this.state = 69;
				(_localctx as ImportExprContext)._filename = this.match(DesmoscriptParser.STRING);
				this.state = 72;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === DesmoscriptParser.T__14) {
					{
					this.state = 70;
					this.match(DesmoscriptParser.T__14);
					this.state = 71;
					(_localctx as ImportExprContext)._alias = this.match(DesmoscriptParser.IDENTIFIER_SEGMENT);
					}
				}

				this.state = 74;
				this.match(DesmoscriptParser.T__15);
				}
				break;

			case 5:
				{
				_localctx = new NamedJsonExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 75;
				(_localctx as NamedJsonExprContext)._namedjsontype = this.match(DesmoscriptParser.T__16);
				this.state = 76;
				(_localctx as NamedJsonExprContext)._jsonval = this.expression(24);
				}
				break;

			case 6:
				{
				_localctx = new IdentifierExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 77;
				(_localctx as IdentifierExprContext)._ident = this.identifier();
				}
				break;

			case 7:
				{
				_localctx = new ListCompExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 78;
				this.match(DesmoscriptParser.T__4);
				this.state = 79;
				(_localctx as ListCompExprContext)._body = this.expression(0);
				this.state = 80;
				this.match(DesmoscriptParser.T__17);
				this.state = 88;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 6, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 81;
						(_localctx as ListCompExprContext)._IDENTIFIER_SEGMENT = this.match(DesmoscriptParser.IDENTIFIER_SEGMENT);
						(_localctx as ListCompExprContext)._variables.push((_localctx as ListCompExprContext)._IDENTIFIER_SEGMENT);
						this.state = 82;
						this.match(DesmoscriptParser.T__18);
						this.state = 83;
						(_localctx as ListCompExprContext)._expression = this.expression(0);
						(_localctx as ListCompExprContext)._lists.push((_localctx as ListCompExprContext)._expression);
						this.state = 84;
						this.match(DesmoscriptParser.T__15);
						}
						}
					}
					this.state = 90;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 6, this._ctx);
				}
				{
				this.state = 91;
				(_localctx as ListCompExprContext)._IDENTIFIER_SEGMENT = this.match(DesmoscriptParser.IDENTIFIER_SEGMENT);
				(_localctx as ListCompExprContext)._variables.push((_localctx as ListCompExprContext)._IDENTIFIER_SEGMENT);
				this.state = 92;
				this.match(DesmoscriptParser.T__18);
				this.state = 93;
				(_localctx as ListCompExprContext)._expression = this.expression(0);
				(_localctx as ListCompExprContext)._lists.push((_localctx as ListCompExprContext)._expression);
				}
				this.state = 95;
				this.match(DesmoscriptParser.T__5);
				}
				break;

			case 8:
				{
				_localctx = new ParentheticalExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 97;
				this.match(DesmoscriptParser.T__7);
				this.state = 98;
				(_localctx as ParentheticalExprContext)._expr = this.expression(0);
				this.state = 99;
				this.match(DesmoscriptParser.T__8);
				}
				break;

			case 9:
				{
				_localctx = new PointExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 101;
				this.match(DesmoscriptParser.T__7);
				this.state = 102;
				(_localctx as PointExprContext)._x = this.expression(0);
				this.state = 103;
				this.match(DesmoscriptParser.T__3);
				this.state = 104;
				(_localctx as PointExprContext)._y = this.expression(0);
				this.state = 105;
				this.match(DesmoscriptParser.T__8);
				}
				break;

			case 10:
				{
				_localctx = new NumberExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 107;
				this.match(DesmoscriptParser.NUMBER);
				}
				break;

			case 11:
				{
				_localctx = new ListExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 108;
				(_localctx as ListExprContext)._l = this.list();
				}
				break;

			case 12:
				{
				_localctx = new SumProdIntegralExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 109;
				(_localctx as SumProdIntegralExprContext)._op = this._input.LT(1);
				_la = this._input.LA(1);
				if (!(((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (DesmoscriptParser.T__31 - 32)) | (1 << (DesmoscriptParser.T__32 - 32)) | (1 << (DesmoscriptParser.T__33 - 32)))) !== 0))) {
					(_localctx as SumProdIntegralExprContext)._op = this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 110;
				this.match(DesmoscriptParser.T__7);
				this.state = 111;
				(_localctx as SumProdIntegralExprContext)._var = this.match(DesmoscriptParser.IDENTIFIER_SEGMENT);
				this.state = 112;
				this.match(DesmoscriptParser.T__18);
				this.state = 113;
				(_localctx as SumProdIntegralExprContext)._lo = this.expression(0);
				this.state = 114;
				this.match(DesmoscriptParser.T__34);
				this.state = 115;
				(_localctx as SumProdIntegralExprContext)._hi = this.expression(0);
				this.state = 116;
				this.match(DesmoscriptParser.T__8);
				this.state = 117;
				(_localctx as SumProdIntegralExprContext)._body = this.expression(10);
				}
				break;

			case 13:
				{
				_localctx = new DerivativeExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 119;
				this.match(DesmoscriptParser.T__35);
				this.state = 120;
				this.match(DesmoscriptParser.T__7);
				this.state = 121;
				(_localctx as DerivativeExprContext)._var = this.match(DesmoscriptParser.IDENTIFIER_SEGMENT);
				this.state = 122;
				this.match(DesmoscriptParser.T__8);
				this.state = 123;
				(_localctx as DerivativeExprContext)._body = this.expression(9);
				}
				break;

			case 14:
				{
				_localctx = new MacroDefinitionExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 124;
				this.match(DesmoscriptParser.T__36);
				this.state = 125;
				(_localctx as MacroDefinitionExprContext)._macroname = this.identifier();
				this.state = 126;
				this.match(DesmoscriptParser.T__7);
				this.state = 127;
				(_localctx as MacroDefinitionExprContext)._macroargs = this.functionDefArgList();
				this.state = 128;
				this.match(DesmoscriptParser.T__8);
				this.state = 129;
				this.match(DesmoscriptParser.T__0);
				this.state = 131;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 130;
					(_localctx as MacroDefinitionExprContext)._expression = this.expression(0);
					(_localctx as MacroDefinitionExprContext)._exprs.push((_localctx as MacroDefinitionExprContext)._expression);
					}
					}
					this.state = 133;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << DesmoscriptParser.T__0) | (1 << DesmoscriptParser.T__4) | (1 << DesmoscriptParser.T__7) | (1 << DesmoscriptParser.T__12) | (1 << DesmoscriptParser.T__13) | (1 << DesmoscriptParser.T__16))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (DesmoscriptParser.T__31 - 32)) | (1 << (DesmoscriptParser.T__32 - 32)) | (1 << (DesmoscriptParser.T__33 - 32)) | (1 << (DesmoscriptParser.T__35 - 32)) | (1 << (DesmoscriptParser.T__36 - 32)) | (1 << (DesmoscriptParser.T__37 - 32)) | (1 << (DesmoscriptParser.T__38 - 32)) | (1 << (DesmoscriptParser.T__40 - 32)) | (1 << (DesmoscriptParser.NUMBER - 32)) | (1 << (DesmoscriptParser.IDENTIFIER_SEGMENT - 32)))) !== 0));
				this.state = 135;
				this.match(DesmoscriptParser.T__1);
				}
				break;

			case 15:
				{
				_localctx = new FunctionDefinitionExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 137;
				this.match(DesmoscriptParser.T__37);
				this.state = 138;
				(_localctx as FunctionDefinitionExprContext)._fnname = this.identifier();
				this.state = 139;
				this.match(DesmoscriptParser.T__7);
				this.state = 140;
				(_localctx as FunctionDefinitionExprContext)._fnargs = this.functionDefArgList();
				this.state = 141;
				this.match(DesmoscriptParser.T__8);
				this.state = 142;
				this.match(DesmoscriptParser.T__0);
				this.state = 144;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 143;
					(_localctx as FunctionDefinitionExprContext)._expression = this.expression(0);
					(_localctx as FunctionDefinitionExprContext)._exprs.push((_localctx as FunctionDefinitionExprContext)._expression);
					}
					}
					this.state = 146;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << DesmoscriptParser.T__0) | (1 << DesmoscriptParser.T__4) | (1 << DesmoscriptParser.T__7) | (1 << DesmoscriptParser.T__12) | (1 << DesmoscriptParser.T__13) | (1 << DesmoscriptParser.T__16))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (DesmoscriptParser.T__31 - 32)) | (1 << (DesmoscriptParser.T__32 - 32)) | (1 << (DesmoscriptParser.T__33 - 32)) | (1 << (DesmoscriptParser.T__35 - 32)) | (1 << (DesmoscriptParser.T__36 - 32)) | (1 << (DesmoscriptParser.T__37 - 32)) | (1 << (DesmoscriptParser.T__38 - 32)) | (1 << (DesmoscriptParser.T__40 - 32)) | (1 << (DesmoscriptParser.NUMBER - 32)) | (1 << (DesmoscriptParser.IDENTIFIER_SEGMENT - 32)))) !== 0));
				this.state = 148;
				this.match(DesmoscriptParser.T__1);
				}
				break;

			case 16:
				{
				_localctx = new NamespaceDefinitionExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 150;
				this.match(DesmoscriptParser.T__38);
				this.state = 151;
				(_localctx as NamespaceDefinitionExprContext)._nsname = this.match(DesmoscriptParser.IDENTIFIER_SEGMENT);
				this.state = 152;
				this.match(DesmoscriptParser.T__0);
				this.state = 154;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 153;
					(_localctx as NamespaceDefinitionExprContext)._expression = this.expression(0);
					(_localctx as NamespaceDefinitionExprContext)._exprs.push((_localctx as NamespaceDefinitionExprContext)._expression);
					}
					}
					this.state = 156;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << DesmoscriptParser.T__0) | (1 << DesmoscriptParser.T__4) | (1 << DesmoscriptParser.T__7) | (1 << DesmoscriptParser.T__12) | (1 << DesmoscriptParser.T__13) | (1 << DesmoscriptParser.T__16))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (DesmoscriptParser.T__31 - 32)) | (1 << (DesmoscriptParser.T__32 - 32)) | (1 << (DesmoscriptParser.T__33 - 32)) | (1 << (DesmoscriptParser.T__35 - 32)) | (1 << (DesmoscriptParser.T__36 - 32)) | (1 << (DesmoscriptParser.T__37 - 32)) | (1 << (DesmoscriptParser.T__38 - 32)) | (1 << (DesmoscriptParser.T__40 - 32)) | (1 << (DesmoscriptParser.NUMBER - 32)) | (1 << (DesmoscriptParser.IDENTIFIER_SEGMENT - 32)))) !== 0));
				this.state = 158;
				this.match(DesmoscriptParser.T__1);
				}
				break;

			case 17:
				{
				_localctx = new DecoratedExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 160;
				(_localctx as DecoratedExprContext)._qualifier = this.match(DesmoscriptParser.IDENTIFIER_SEGMENT);
				this.state = 161;
				(_localctx as DecoratedExprContext)._expr = this.expression(0);
				this.state = 162;
				this.match(DesmoscriptParser.T__39);
				this.state = 163;
				(_localctx as DecoratedExprContext)._jsonval = this.expression(5);
				}
				break;

			case 18:
				{
				_localctx = new BlockExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 165;
				this.match(DesmoscriptParser.T__0);
				this.state = 167;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 166;
					(_localctx as BlockExprContext)._expression = this.expression(0);
					(_localctx as BlockExprContext)._exprs.push((_localctx as BlockExprContext)._expression);
					}
					}
					this.state = 169;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << DesmoscriptParser.T__0) | (1 << DesmoscriptParser.T__4) | (1 << DesmoscriptParser.T__7) | (1 << DesmoscriptParser.T__12) | (1 << DesmoscriptParser.T__13) | (1 << DesmoscriptParser.T__16))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (DesmoscriptParser.T__31 - 32)) | (1 << (DesmoscriptParser.T__32 - 32)) | (1 << (DesmoscriptParser.T__33 - 32)) | (1 << (DesmoscriptParser.T__35 - 32)) | (1 << (DesmoscriptParser.T__36 - 32)) | (1 << (DesmoscriptParser.T__37 - 32)) | (1 << (DesmoscriptParser.T__38 - 32)) | (1 << (DesmoscriptParser.T__40 - 32)) | (1 << (DesmoscriptParser.NUMBER - 32)) | (1 << (DesmoscriptParser.IDENTIFIER_SEGMENT - 32)))) !== 0));
				this.state = 171;
				this.match(DesmoscriptParser.T__1);
				}
				break;
